# QnapLCD-Menu

./: pyproject.toml
.devcontainer/: devcontainer.json
qnaplcd/: __init__.py  cli.py  default.py  driver.py  menu.py  plugin.py
qnaplcd/plugins/: hostname.py
